--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 body {
     display: flex;
     flex-direction: column;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin: 0;
+    min-height: 100vh;
 }
 
 .header {
@@ -29,9 +32,15 @@ body {
     border: 5px dotted red;
     flex: auto;
 }
+.hero-image-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
-.container .hero-image{
-    max-height: 400px;
+.hero-image {
+   width: 300px;
+   
 }
 
 .hero {
