--- a/style.css
+++ b/style.css
@@ -6,10 +6,42 @@ body {
     min-height: 100vh;
 }
 
+a {
+    text-decoration: none;
+    color: #e5e7eb;
+    font-size: 18px;
+}
+
 .header {
     display: flex;
     justify-content: space-around;
-    border: 5px solid purple;
+    background-color: #1f2937;
+    padding-top: 20px;
+}
+
+.logo-header {
+    font-size: 24px;
+    color: #f9faf8;
+    font-weight: bold;
+    width: 500px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    
+}
+
+.header-links {
+    width: 500px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 30px;
+}
+
+.hero-title {
+    font-size: 48px;
+    font-weight: 900;
 }
 
 .body {
@@ -18,29 +50,28 @@ body {
     flex-direction: column;
 }
 
-.footer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: grey;
-    height: 50px;
-}
-
 .top {
     display: flex;
     justify-content: space-around;
-    border: 5px dotted red;
+    align-items: center;
+    color: #f9faf8;
+    background-color: #1f2937;
     flex: auto;
 }
+
 .hero-image-container {
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 500px;
+    background-color: #3b4655;
+    margin: 80px 0px;
+    border-radius: 10px;
+    
 }
 
 .hero-image {
-   width: 300px;
-   
+   width: 250px;
 }
 
 .hero {
@@ -48,6 +79,17 @@ body {
     justify-content: center;
     align-items: flex-start;
     flex-direction: column;
+    width: 500px;
+}
+
+.hero button {
+    background-color: #3882f6;
+    color: #f9faf8;
+    border: none;
+    font-weight: 700;
+    font-size: 16px;
+    border-radius: 10px;
+    padding: 8px 30px;
 }
 
 .middle {
@@ -55,23 +97,56 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border: 5px solid green;
-    flex: auto;
+    flex: auto;    
+}
+
+.random-information {
+    font-size: 36px;
+    font-weight: 900;
+    margin: 50px;
 }
 
 .middle-items {
     display: flex;
-    flex-direction: row;
+    justify-content: space-around;
+    align-items: flex-start;
     gap: 30px;
+    flex: auto;
+    flex-wrap: wrap;
+}
+
+.middle-items img,
+.middle-items p {
+    display: flex;
+    width: 300px;
+    border-radius: 10px;
+    
 }
 
 .quote {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: lightgray;
+    font-size: 36px;
+    font-style: italic; 
+    font-weight: lighter;
+    color: #1f2937;
+    background-color: #e5e7eb;
     flex: 1 1 auto;
     padding: 50px;
+}
+
+.text {
+    flex: auto;
+    min-width: 200px;
+    max-width: 900px;
+}
+
+.quote-sign {
+    text-align: end;
+    font-style: normal;
+    font-size: 24px;
+    font-weight: 500;
 }
 
 .text {
@@ -85,8 +160,8 @@ body {
 }
 
 .bottom-container {
-    background-color: lightseagreen;
-    width: 300px;
+    background-color: #3882f6;
+    width: 800px;
     height: 50px;
     border-radius: 10px;
     display: flex;
@@ -94,5 +169,36 @@ body {
     align-items: center;
     margin: 50px;
     padding: 25px;
-    
+}
+
+.text-container {
+    color: #e5e7eb;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.text-container .title {
+    font-weight: 700;
+    font-size: 18px;
+    color: #f9faf8;
+}
+
+.bottom-container button {
+    padding: 8px 40px;
+    background-color: #3882f6;
+    border: 2px solid #f9faf8;
+    border-radius: 10px;
+    color: #f9faf8;
+    font-weight: bold;
+    font-size: 16px;
+}
+
+.footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #1f2937;
+    color: #e5e7eb;
+    height: 80px;
 }
